--- a/src/TreeView.html
+++ b/src/TreeView.html
@@ -1,17 +1,13 @@
-<!-- "https://www.gcpsk12.org/cms/lib/GA02204486/Centricity/Domain/9896/eCLASS%20Logo.png" -->
-<!-- Ist mein U Liz pflichtig? -->
-
 <!DOCTYPE html>
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Horizontal Genealogy Treeview</title>
+  <title>Tree-View</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"><link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
-<!-- partial:index.partial.html -->
 <div class="body genealogy-body genealogy-scroll">
   <div class="genealogy-tree">
     <ul>
@@ -21,7 +17,7 @@
             <div class="child-image">
               <img src="https://www.gcpsk12.org/cms/lib/GA02204486/Centricity/Domain/9896/eCLASS%20Logo.png">
               <div class="child-details">
-                <h3>Ist mein U Liz pflichtig?<br>Dann !!!!!!!!!</h3>
+                <h3>Ist mein U Liz pflichtig?<br>Dann !!!!!!!!!<br>hhhhhhhhhhhhhhhhhhh<br>mmmmmmmmmmmmm</h3>
               </div>
             </div>
           </div>
@@ -460,7 +456,7 @@
     </ul>
   </div>
 </div>
-<!-- partial -->
+
 <script src='https://code.jquery.com/jquery-3.4.1.min.js'></script><script  src="./script.js"></script>
 
 </body>
