--- a/src/Project_2/graphic-for-decision-questions.html
+++ b/src/Project_2/graphic-for-decision-questions.html
@@ -8,28 +8,58 @@
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"><link rel="stylesheet" href="button.css">
 
   <div id="box" style="text-align:center;width: 400px;margin: 0 auto;padding: 100px">
-    <input class="button-73" type="button" value="how are you?" id="1" onclick="show1(this.id)"/>
+    <input class="button-73" type="button"
+           value="Ist mein Unternehmen Lizenzpflichtig?"
+           id="1" onclick="show1(this.id)"/>
 
-    <input class="button-73" type="button" value="fine" id="2" onclick="show2(this.id,2)" hidden/>
-    <input class="button-73" type="button" value="Not fine" id="3" onclick="show3(this.id,3)" hidden/>
+    <input class="button-73" type="button"
+           value="Produkte beschreiben"
+           id="2" onclick="show2(this.id,2)" hidden/>
+    <input class="button-73" type="button"
+           value="E-Class Daten erhalten"
+           id="3" onclick="show3(this.id,3)" hidden/>
 
-    <input class="button-73" type="button" value="nice weather" id="4" onclick="show2(this.id,4)" hidden/>
-    <input class="button-73" type="button" value="nice people" id="5" onclick="show3(this.id,5)" hidden/>
+    <input class="button-73" type="button"
+           value="Das mache ich selbst"
+           id="4" onclick="show2(this.id,4)" hidden/>
+    <input class="button-73" type="button"
+           value="Externes Unternehmen beauftragen"
+           id="5" onclick="show3(this.id,5)" hidden/>
 
-    <input class="button-73" type="button" value="bad weather" id="6" onclick="show2(this.id,6)" hidden/>
-    <input class="button-73" type="button" value="bad people" id="7" onclick="show3(this.id, 7)"hidden/>
+    <input class="button-73" type="button"
+           value="weitere E-Class Daten hinzufügen"
+           id="6" onclick="show2(this.id,6)" hidden/>
+    <input class="button-73" type="button"
+           value="Daten nur Lesen"
+           id="7" onclick="show3(this.id, 7)"hidden/>
 
-    <input class="button-73" type="button" value="Sommer" id="8" onclick="show()" hidden/>
-    <input class="button-73" type="button" value="Winter" id="9" onclick="show()"hidden/>
+    <input class="button-73" type="button"
+           value="======== 8 ========"
+           id="8" onclick="show()" hidden/>
+    <input class="button-73" type="button"
+           value="======== 9 ========"
+           id="9" onclick="show()"hidden/>
 
-    <input class="button-73" type="button" value="friends" id="10" onclick="show()" hidden/>
-    <input class="button-73" type="button" value="family" id="11" onclick="show()"hidden/>
+    <input class="button-73" type="button"
+           value="======== 10 ========"
+           id="10" onclick="show()" hidden/>
+    <input class="button-73" type="button"
+           value="======== 11 ========"
+           id="11" onclick="show()"hidden/>
 
-    <input class="button-73" type="button" value="hot" id="12" onclick="show()" hidden/>
-    <input class="button-73" type="button" value="cold" id="13" onclick="show()"hidden/>
+    <input class="button-73" type="button"
+           value="======== 12 ========"
+           id="12" onclick="show()" hidden/>
+    <input class="button-73" type="button"
+           value="======== 13 ========"
+           id="13" onclick="show()"hidden/>
 
-    <input class="button-73" type="button" value="bad pe 1" id="14" onclick="show()" hidden/>
-    <input class="button-73" type="button" value="bad pe 2" id="15" onclick="show()"hidden/>
+    <input class="button-73" type="button"
+           value="======== 14 ========"
+           id="14" onclick="show()" hidden/>
+    <input class="button-73" type="button"
+           value="======== 15 ========"
+           id="15" onclick="show()"hidden/>
   </div>
 
 </head>
@@ -67,17 +97,6 @@
     document.getElementById((n-1).toString()).remove();
     document.getElementById((n+x).toString()).removeAttribute("hidden");
     document.getElementById((n+x+1).toString()).removeAttribute("hidden");
-
-  }
-
-  function show4(id) {
-
-    let n = parseInt(id);
-
-    document.getElementById(n.toString()).remove();
-    document.getElementById((n+1).toString()).remove();
-    document.getElementById((n+3).toString()).removeAttribute("hidden");
-    document.getElementById((n+4).toString()).removeAttribute("hidden");
 
   }
 </script>
